ovphysx/0.3.7/_downloads/27d649e8afcaadd358fbe2108bab57a9/ovphysx_types.h

/**
 * String with pointer and length.
 * 
 * Strings are NOT guaranteed to be null-terminated. Always use the length field.
 * Use OVPHYSX_LITERAL("literal") or ovphysx_cstr() for convenient construction.
 */
typedef struct ovphysx_string_t
{
    const char* ptr;   /**< Pointer to string data (not guaranteed null-terminated) */
    size_t length;     /**< Length in bytes */
} ovphysx_string_t;
    /**
     * Geometry type for sweep and overlap queries.
     *
     * SHAPE accepts any UsdGeomGPrim path (sphere, box, capsule, cone,
     * cylinder, mesh, etc.). For meshes the runtime uses a convex
     * approximation internally.
     */
    typedef enum
    {
        OVPHYSX_SCENE_QUERY_GEOMETRY_SPHERE = 0, /**< Sphere defined by radius + center position. */
        OVPHYSX_SCENE_QUERY_GEOMETRY_BOX    = 1, /**< Oriented box defined by half-extents + pose. */
        OVPHYSX_SCENE_QUERY_GEOMETRY_SHAPE  = 2, /**< Arbitrary UsdGeomGPrim identified by prim path. */
    } ovphysx_scene_query_geometry_type_t;
    /**
     * Geometry descriptor for sweep/overlap queries.
     *
     * Set `type` and fill the corresponding union member.
     */
    typedef struct
    {
        ovphysx_scene_query_geometry_type_t type;
        union
        {
            struct
            {
                float radius;       /**< Sphere radius. */
                float position[3];  /**< Sphere center (world space). */
            } sphere;
            struct
            {
                float half_extent[3]; /**< Box half-extents. */
                float position[3];    /**< Box center (world space). */
                float rotation[4];    /**< Box orientation quaternion (x, y, z, w). */
            } box;
            struct
            {
                const char* prim_path; /**< Null-terminated USD prim path for any UsdGeomGPrim. */
            } shape;
        };
    } ovphysx_scene_query_geometry_desc_t;
    /**
     * Scene query hit result.
     *
     * Used for raycast, sweep, and overlap queries. For overlap queries the
     * location fields (normal, position, distance, face_index, material) are
     * zeroed -- only the object identity fields are populated.
     *
     * Path fields (collision, rigid_body, material) are uint64-encoded SdfPaths
     * matching the internal Omni PhysX representation.
     */
    typedef struct
    {
        uint64_t collision;    /**< Collision shape SdfPath (uint64 encoded). */
        uint64_t rigid_body;   /**< Rigid body SdfPath (uint64 encoded). */
        uint32_t proto_index;  /**< Point instancer prototype index (0xFFFFFFFF if N/A). */
        float    normal[3];    /**< Hit normal (world space). Zero for overlap queries. */
        float    position[3];  /**< Hit position (world space). Zero for overlap queries. */
        float    distance;     /**< Hit distance along ray/sweep direction. Zero for overlap. */
        uint32_t face_index;   /**< Triangle mesh face index. Zero for non-mesh hits. */
        uint64_t material;     /**< Material SdfPath (uint64 encoded). Zero for overlap. */
    } ovphysx_scene_query_hit_t;
    /*--------------------------------------------------*/
    /* Result and status types */
    /*--------------------------------------------------*/

    typedef enum
    {
        OVPHYSX_API_SUCCESS = 0,             /**< Operation completed or enqueued successfully */
        OVPHYSX_API_ERROR = 1,               /**< Operation failed - check error field */
        OVPHYSX_API_TIMEOUT = 2,             /**< Operation timed out */
        OVPHYSX_API_NOT_IMPLEMENTED = 3,     /**< Feature not yet implemented */
        OVPHYSX_API_INVALID_ARGUMENT = 4,    /**< Invalid argument provided */
        OVPHYSX_API_NOT_FOUND = 5,           /**< Requested resource not found (handle unknown, binding invalidated) */
        OVPHYSX_API_BUFFER_TOO_SMALL = 6,    /**< Caller-supplied buffer is too small; check out_required_size */
        OVPHYSX_API_DEVICE_MISMATCH = 7,     /**< Tensor device doesn't match binding's expected device */
        OVPHYSX_API_GPU_NOT_AVAILABLE = 8,   /**< GPU requested but not available or CUDA init failed */
    } ovphysx_api_status_t;
    /**
     * Result returned by synchronous API functions.
     *
     * On failure (status != OVPHYSX_API_SUCCESS), call ovphysx_get_last_error()
     * on the same thread to retrieve the error message.
     */
    typedef struct
    {
        ovphysx_api_status_t status; /**< Operation status code */
    } ovphysx_result_t;