ovphysx/python/ovphysx/_bindings.py


class _BoxGeom(ctypes.Structure):
    _fields_ = [
        ("half_extent", ctypes.c_float * 3),
        ("position", ctypes.c_float * 3),
        ("rotation", ctypes.c_float * 4),
    ]


class _ShapeGeom(ctypes.Structure):
    _fields_ = [("prim_path", ovphysx_string_t)]


class _GeomUnion(ctypes.Union):
    _fields_ = [("sphere", _SphereGeom), ("box", _BoxGeom), ("shape", _ShapeGeom)]


class ovphysx_scene_query_geometry_desc_t(ctypes.Structure):
    """Geometry descriptor for sweep/overlap queries (matches C API)."""
    _fields_ = [("type", c_int), ("_geom", _GeomUnion)]


class ovphysx_scene_query_hit_t(ctypes.Structure):
    """Scene query hit result (matches C API)."""
    _fields_ = [
        ("collision", c_uint64),
        ("rigid_body", c_uint64),
        ("proto_index", c_uint32),
        ("normal", ctypes.c_float * 3),
        ("position", ctypes.c_float * 3),
        ("distance", ctypes.c_float),
        ("face_index", c_uint32),
        ("material", c_uint64),
    ]


# Scene query function prototypes
_lib.ovphysx_raycast.restype = ovphysx_result_t
_lib.ovphysx_raycast.argtypes = [
    c_uint64,                                              # handle
    ctypes.c_float * 3,                                    # origin
    ctypes.c_float * 3,                                    # direction
    ctypes.c_float,                                        # distance
    ctypes.c_bool,                                         # both_sides
    c_int,                                                 # mode
    POINTER(POINTER(ovphysx_scene_query_hit_t)),           # out_hits
    POINTER(c_uint32),                                     # out_count
]

_lib.ovphysx_sweep.restype = ovphysx_result_t
_lib.ovphysx_sweep.argtypes = [
    c_uint64,                                              # handle
    POINTER(ovphysx_scene_query_geometry_desc_t),          # geometry
    ctypes.c_float * 3,                                    # direction
    ctypes.c_float,                                        # distance
    ctypes.c_bool,                                         # both_sides
    c_int,                                                 # mode
    POINTER(POINTER(ovphysx_scene_query_hit_t)),           # out_hits
    POINTER(c_uint32),                                     # out_count
]

_lib.ovphysx_overlap.restype = ovphysx_result_t
_lib.ovphysx_overlap.argtypes = [
    c_uint64,                                              # handle
    POINTER(ovphysx_scene_query_geometry_desc_t),          # geometry
    c_int,                                                 # mode
    POINTER(POINTER(ovphysx_scene_query_hit_t)),           # out_hits
    POINTER(c_uint32),                                     # out_count
]


# ---------------------------------------------------------------------------
# SDF view
# ---------------------------------------------------------------------------

_lib.ovphysx_create_sdf_view.restype = ovphysx_result_t
_lib.ovphysx_create_sdf_view.argtypes = [
    c_uint64,           # handle
    ovphysx_string_t,   # pattern
    c_uint32,           # max_query_points
    POINTER(c_uint64),  # out_handle
]

_lib.ovphysx_sdf_view_get_count.restype = ovphysx_result_t
_lib.ovphysx_sdf_view_get_count.argtypes = [c_uint64, c_uint64, POINTER(c_uint32)]

_lib.ovphysx_sdf_view_get_max_query_points.restype = ovphysx_result_t
_lib.ovphysx_sdf_view_get_max_query_points.argtypes = [c_uint64, c_uint64, POINTER(c_uint32)]

_lib.ovphysx_evaluate_sdf.restype = ovphysx_result_t
_lib.ovphysx_evaluate_sdf.argtypes = [
    c_uint64,                  # handle
    c_uint64,                  # sdf_handle
    ctypes.c_void_p,           # query_points (DLTensor*)
    ctypes.c_void_p,           # out_distances_and_gradients (DLTensor*)
]

_lib.ovphysx_destroy_sdf_view.restype = ovphysx_result_t
_lib.ovphysx_destroy_sdf_view.argtypes = [c_uint64, c_uint64]


def get_native_version_string() -> str:
    """Return the native library version string, or empty string if unavailable."""
    try:
        value = _lib.ovphysx_get_version_string()
        if not value:
            return ""
        if isinstance(value, bytes):
            return value.decode("utf-8", errors="replace")
        return str(value)
    except Exception:
        return ""
